[gd_scene load_steps=2 format=3 uid="uid://cymle8070tiuq"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_uu0r2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uu0r2")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 165.0
offset_right = 577.0
offset_bottom = 253.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 314.0
offset_right = 585.0
offset_bottom = 402.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 408.0
offset_right = 586.0
offset_bottom = 496.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 85.0
offset_right = 705.0
offset_bottom = 116.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 280.0
offset_right = 679.0
offset_bottom = 311.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 242.0
offset_right = 686.0
offset_bottom = 277.0
text = "Address:"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 47.0
offset_right = 712.0
offset_bottom = 82.0
text = "Name:"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
